@@ -420,10 +420,11 @@
 (define (swank:operator-arglist socket name pack)
   (let ((v (ignore-errors
 	    (lambda ()
-	      (with-output-to-string 
-		(lambda ()
-		  (carefully-pa 
-		   (eval (read-from-string name) (user-env pack)))))))))
+              (string-trim-right
+               (with-output-to-string
+                 (lambda ()
+                   (carefully-pa
+                    (eval (read-from-string name) (user-env pack))))))))))
     (if (condition? v) 'nil v)))
 
 (define (carefully-pa o)
