@@ -1,3 +1,10 @@
+2012-04-20  John Smith <ohwoeowho@googlemail.com>
+
+	Prettier arglists.
+
+	* swank-mit-scheme.scm (swank:operator-arglist): Remove trailing
+	newlines.
+
 2012-04-13  Nikodemus Siivola  <nikodemus@random-state.net>
 
 	* slime-cl-indent.el (lisp-indent-259): If we are expecting a
